0814/restful/HTTP METHOD, VALIDATATION, etc..

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,10 @@ server:
 logging:
   level:
     org.springframework: DEBUG
+
+
+
+spring:
+  messages:
+    basename: messages
+    fallback-to-system-locale: false
