--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,18 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.1.7.RELEASE</version>
         </dependency>
+            <!--jpa-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
