--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,21 +3,38 @@ server:
 
 logging:
   level:
-    org.springframework: DEBUG
+   org.springframework: DEBUG
 
 
 
 spring:
+
   messages:
     basename: messages
     fallback-to-system-locale: false
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  security:
-    user:
-      name: username
-      password: passw0rd
+  #security:
+   # user:
+    #  name: username
+    #  password: passw0rd
+  datasource:
+    url: jdbc:h2:mem:testdb;NON_KEYWORDS=USER
+    username: sa
+
+
+  h2:
+    console:
+      enabled: true
+
+  jpa:
+    show-sql: true
+    defer-datasource-initialization: true
+
+
+
+
 
 management:
   endpoints:
